# drcog-lulc

./: .pre-commit-config.yaml  CHANGELOG.md  DRCOG_2018_LULC_E3220000_N1710000.json  README-template.md  README.md  docker_env  environment.yml  examples  item.json  requirements-dev.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
docker/: Dockerfile-dev
docs/: installation_and_basic_usage.ipynb
docs/source/: conf.py  index.rst
examples/: collection.json  file-list.txt
examples/DRCOG_2018_LULC_E3220000_N1710000/: DRCOG_2018_LULC_E3220000_N1710000.json
examples/DRCOG_2020_LULC_E2880000_N1680000/: DRCOG_2020_LULC_E2880000_N1680000.json
examples/drcog-lulc-2018/: drcog-lulc-2018.json
examples/drcog-lulc-2020/: drcog-lulc-2020.json
examples/drcog-lulc-hr-pilot/: drcog-lulc-hr-pilot.json
scripts/: format  lint
src/stactools/drcog_lulc/: __init__.py  commands.py  constants.py  stac.py  tile.py
tests/: test_commands.py  test_module.py  test_stac.py
tests/data-files/: DRCOG_2018_LULC_E3220000_N1710000.tif  DRCOG_2020_LULC_E2880000_N1680000.tif  drcog_lulc_2020.tif
