[metadata]
name = stactools-drcog-lulc
version = attr: stactools.drcog_lulc.__version__
description = PROVIDE DESCRIPTION HERE
long_description = file: README.md
long_description_content_type = text/markdown
author = stac-utils
author_email = stac@radiant.earth
url = https://github.com/stactools-packages/drcog-lulc
project_urls =
    Documentation = https://stactools-drcog-lulc.readthedocs.io/en/latest/
    Issues = https://github.com/stactools-packages/drcog-lulc/issues
keywords =
    stactools
    pystac
    catalog
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools >= 0.2.6

[options.packages.find]
where = src
